force-app/main/default/objects/ERP_Order_Settings__c/fields/Hide_Enter_New_Name_Option__c.field-meta.xml
<CustomField>
    <fullName>Hide_Enter_New_Name_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Enter New Name Option</label>
    <type>Checkbox</type>
</CustomField>