force-app/main/default/objects/ERP_Order_Settings__c/fields/Insufficient_Inventory_Email__c.field-meta.xml
<CustomField>
    <fullName>Insufficient_Inventory_Email__c</fullName>
    <label>Insufficient Inventory Email</label>
    <type>Email</type>
</CustomField>