force-app/main/default/objects/ERP_Order_Settings__c/fields/Inventory_Balance_Check_Negative__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Balance_Check_Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Balance Check Negative</label>
    <type>Checkbox</type>
</CustomField>